--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,7 +120,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
+		background-color: #ffffff;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
