Experimented with colors

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -50,8 +50,8 @@
 		),
 
 		accent:				#8cc9f0,
-		accent1:			#efa8b0,
-		accent2:			#c79cc8,
+		accent1:			#c9152a,
+		accent2:			#63ce3f,
 		accent3:			#a89cc8,
 		accent4:			#9bb2e1,
 		accent5:			#8cc9f0,
