--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2292,15 +2292,15 @@ input, select, textarea {
 			}
 
 		.icon.style1 {
-			color: #efa8b0;
+			color: #D06E6D;
 		}
 
 		.icon.style2 {
-			color: #c79cc8;
+			color: #70AF73;
 		}
 
 		.icon.style3 {
-			color: #a89cc8;
+			color: #BFC0BF;
 		}
 
 		.icon.style4 {
