Changed icon color on hover

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2300,7 +2300,7 @@ input, select, textarea {
 		}
 
 		.icon.style3 {
-			color: #BFC0BF;
+			color: #222222ad;
 		}
 
 		.icon.style4 {
@@ -3345,7 +3345,7 @@ input, select, textarea {
 		}
 
 		#main a:hover {
-			color: #636363;
+			color: #3b3b3b3e;
 		}
 
 		#main strong, #main b {
