--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,10 +100,10 @@ input, select, textarea {
 
 	body {
 		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #4678c8 15%, #ffffff 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #4678c8 15%, #fff 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #4678c8 15%, #fff 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #4678c8 15%, #fff 85%);
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #3066be 15%, #fff 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #3066be 15%, #fff 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #3066be 15%, #fff 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #3066be 15%, #fff 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
